# smollama

./: .gitignore  ARCHITECTURE_PLAN.md  BROWSER_TESTING.md  CLAUDE.md  MULTI_MACHINE_SETUP.md  QUICK_WINS_IMPLEMENTATION.md  README.md  ROADMAP.md  config.alpaca-pi.example.yaml  config.example.yaml  config.llama-master.example.yaml  config.pi-alpaca.yaml  config.yaml  pyproject.toml
.claude-plugin/: marketplace.json
.serena/: project.yml
demos/5161as/: README.md  demo.py  demo_pi5.py  pyproject.toml  wiring.pddl.xml  wiring.pddl.yaml
demos/hc-sr04/: README.md  demo.py  pyproject.toml
demos/lcd-1602a/: README.md  demo.py  pyproject.toml  wiring.pddl.xml
demos/sh5461as/: README.md  demo.py  demo_pi5.py  pyproject.toml
deploy/mem0/: config.yaml  docker-compose.yml
docs/: jetson-inference.md  master-dashboard-jetson-offline-report.md  plugin-development.md
examples/config/: config.edge.example.yaml  config.example.yaml
examples/plugins/: README.md  i2c_temp_plugin.py
roadmap/: OPENCLAW_INTEGRATION.md  ROADMAP.md  adaptive-scheduling.md  future-directions.md  improvements.md  install-scripts.md  mdns-discovery.md  memory-utilization.md  multi-node-dashboard.md  plugin-system.md  quick-wins.md  uv-migration.md  websocket-dashboard.md
scripts/: install.sh  restart-agent.sh  setup-pi.sh  start.sh
smollama/: __init__.py  __main__.py  agent.py  config.py  gpio_reader.py  mqtt_client.py  ollama_client.py  preflight.py
smollama/dashboard/: __init__.py  app.py
smollama/discovery/: __init__.py  mdns.py
smollama/mem0/: __init__.py  bridge.py  client.py  tools.py
smollama/memory/: __init__.py  embeddings.py  local_store.py  observation_loop.py
tasks/: prd-plugin-system.md
tests/: test_agent.py  test_dashboard.py  test_local_store.py  test_mem0.py  test_memory_tools.py  test_observation_loop.py  test_preflight.py  test_reading_tools.py  test_readings.py  test_sync.py  test_tools.py
(+45 files in other folders)
